# yolov5-TensorRT

./: README.md
detector/: .gitignore  CMakeLists.txt  Detector.cpp  Detector.h  DetectorWrapper.h  test.cpp  yololayer.h
model_process/: CMakeLists.txt  model_process.cpp
yolov5/: .gitignore  get_anchors.py  learn.py  pre_export.py  train.py
yolov5/data/: car_wheel.yaml
yolov5/my_export/: readme.md
yolov5/my_export/convert-onnx/: common.py  convert_onnx.py
yolov5/utils/: autoanchor.py
